<resources>
    <string name="app_name" translatable="false">Eltex Social Media</string>
    <string name="app_name_icon" translatable="false">Eltex Academy</string>
    <string name="app_name_path" translatable="false">Eltex-Social-Media</string>
    <string name="app_not_found">Application not found</string>
    <string name="not_implemented">Not implemented</string>
    <string name="shared">Shared</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="text_is_copied">The text is copied</string>
    <string name="download_image">Download the image</string>
    <string name="download_start">Download Start</string>
    <string name="image_upload_error">Image upload error</string>
    <string name="uploading_an_image">Uploading an image</string>
    <string name="being_downloaded_please_wait">The file is being downloaded, please wait…</string>
    <string name="create_post">Create post</string>
    <string name="new_post_title">New Post</string>
    <string name="save_post">Save post</string>
    <string name="update_post_title">Updating the post</string>
    <string name="new_post_content_hint">Write content for your new post! Don`t forget to add an image for your new post! You can select a photo from the bottom.</string>
    <string name="delete_post">Delete post</string>
    <string name="update_post">Update post</string>
    <string name="image">Image</string>
    <string name="remove_image">Remove image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="likes">Likes</string>
    <string name="participation">Participation</string>
    <string name="new_event_title">New event</string>
    <string name="save_event">Save event</string>
    <string name="create_event">Create event</string>
    <string name="update_event_title">Updating the event</string>
    <string name="new_event_content_hint">Write a description for your new event! Don`t forget to add an image for your new post! You can select a photo from the bottom.</string>
    <string name="new_event_link_hint">Insert the link of your event!</string>
    <string name="new_event_address_hint">Insert the address of your event!</string>
    <string name="new_event_data_hint">When will your event take place?</string>
    <string name="new_event_options_hint">How will your event go? Online or Offline?</string>
    <string name="delete_event">Delete event</string>
    <string name="update_event">Update event</string>
    <string name="changed">Changed</string>
    <string name="error_text_post_is_empty">The text of the post is not written</string>
    <string name="error_text_event_is_empty">Not all fields have been entered!</string>
    <string name="published">Published</string>
    <string name="author">Author</string>
    <string name="data_event">Date of the event</string>
    <string name="event">Event</string>
    <string name="link">Link</string>
    <string name="post">Post</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="jobs">Jobs</string>
    <string name="job">Job</string>
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="company_data_and_your_position">Company data and your position</string>
    <string name="the_period_of_employment_in_the_company">The period of employment in the company</string>
    <string name="beginning_of_the_work_period">Beginning of the work period</string>
    <string name="end_of_the_working_period">End of the working period</string>
    <string name="save_job_data">Save job data</string>
    <string name="new_job">New Job</string>
    <string name="update_job_data">Update job data</string>
    <string name="working_period">Working period</string>
    <string name="select_date_working_period">Select date working period</string>
    <string name="select_working_period">Select the period of operation</string>
    <string name="data_entry_card_title">Company Information</string>
    <string name="data_entry_card_description">Here you need to enter information about the company and your position.</string>
    <string name="working_period_card_title">Working period</string>
    <string name="working_period_card_description">Here you need to specify the period of work in the company.</string>
    <string name="image_compression_error">Image compression error</string>
    <string name="image_compression_error_description">Your image could not be compressed or the image data was not found on the device. Please disable image compression by clicking on the button or in the additional image sending settings.</string>
    <string name="unplug">Unplug</string>
    <string name="delete_post_title">Deleting a post</string>
    <string name="delete_post_message">Are you sure you want to delete this post?</string>
    <string name="delete_event_title">Deleting an event</string>
    <string name="delete_event_message">ВAre you sure you want to delete this event?</string>
    <string name="delete_job_title">Deleting a place of work</string>
    <string name="delete_job_message">Are you sure you want to delete this place of work?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Remove</string>
    <string name="additional_settings_for_the_image">Additional settings for the image</string>
    <string name="compress_images">Compress images</string>
    <string name="rules_for_publishing_content">Rules for publishing content</string>
    <string name="compress_images_title">Image Compression</string>
    <string name="compress_images_description">Image compression practically does not degrade the quality. The image metadata is deleted and the image resolution is optimized.</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_connection_server_error">There is no connection to the server, check your internet connection and try again later.</string>
    <string name="incorrect_username_or_password_error">Incorrect username or password.</string>
    <string name="incorrect_data_error">Incorrect data</string>
    <string name="ok">Ok</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="event_take_will">Event will take</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="select_date_and_time">Date and time</string>
    <string name="thanks">Thanks</string>
    <string name="thanks_">Thanks!</string>
    <string name="settings">Settings</string>
    <string name="сhanging_the_application_language">Changing the application language</string>
    <string name="changing_the_app_theme">Changing the app theme</string>
    <string name="choose_language">Choose a language</string>
    <string name="choose_theme">Choose a theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="amoled_theme">AMOLED Theme</string>
    <string name="system_theme">System theme</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="system_language">System language</string>
    <string name="application_appearance">Application appearance</string>
    <string name="vibration_response_app">Vibration response app</string>
    <string name="vibration_on">Vibration is enabled</string>
    <string name="vibration_off">Vibration is turned off</string>
    <string name="language_in_application_title">Choosing the application language</string>
    <string name="language_in_application_description">Here you can choose the language of the application from the ones presented. "System language" - select the language of the application as in the system on the device.</string>
    <string name="theme_in_application_title">Choosing an application theme</string>
    <string name="theme_in_application_description">Here you can choose an application theme from the ones presented. "System theme" - select the theme of the application as in the system on the device.</string>
    <string name="vibration_in_application_title">Vibration switch</string>
    <string name="vibration_in_application_description">This switch allows you to turn on and off the vibration response in the app based on your actions.</string>
    <string name="data_and_cache_app">Data and cache application</string>
    <string name="clear_cache">Clear the cache</string>
    <string name="application_cache_size">Cache size</string>
    <string name="application_cache_size_app">Application cache size</string>
    <string name="cleared_cache">The application cache has been cleared</string>
    <string name="data_and_cache_description">You can clear the entire cache of this application. All important data will be saved. Only temporary and unnecessary files such as images, text, etc. will be deleted.</string>
    <string name="application_information">Application Information</string>
    <string name="longDescriptionFunCard">If you long-press the controls (cards) in the application, a dialog menu will appear with a description of the feature.</string>
    <string name="option_switch_title">Event Switch</string>
    <string name="option_switch_description">This switch allows you to select whether the event will be online or offline. If the switch is on, the event will be online and you will need to specify the event link, otherwise it will be offline and you will need to specify the event address.</string>
    <string name="date_picker_title">Date and time selection</string>
    <string name="date_picker_description">This element allows you to select the date and time of the event. Click on the button to open the calendar and select the date and then the time. The date and time of the app users will be displayed depending on their local date and time on their smartphone.</string>
    <string name="no_posts">There are no posts yet</string>
    <string name="no_events">There are no events yet</string>
    <string name="no_jobs">There is no information about the work yet</string>
    <string name="new_post_short_label">New post</string>
    <string name="new_post_long_label">Go to create a new post</string>
    <string name="new_event_short_label">New event</string>
    <string name="new_event_long_label">Go to create a new event</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="registration">Registration</string>
    <string name="authorization">Authorization</string>
    <string name="login_account">Login to your account</string>
    <string name="login_no_transferred">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="no_account_to_registration">No account? Register!</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_not_registered">This user does not exist</string>
    <string name="logout">Logout</string>
    <string name="logout_account">Log out of your account</string>
    <string name="confirmation_of_account_logout">Are you sure you want to exit the app? All important and temporary application data will be deleted!</string>
    <string name="back_authorization">Go back to logging in to your account</string>
    <string name="the_user_is_already_registered">The user is already registered</string>
    <string name="incorrect_photo_format">Incorrect photo format</string>
</resources>