<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Ярлык для создания нового поста -->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_rss_feed_24"
        android:shortcutId="create_post"
        android:shortcutLongLabel="@string/new_post_short_label"
        android:shortcutShortLabel="@string/new_post_long_label"
        app:iconTint="@color/active_element"
        tools:ignore="UnusedAttribute">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.eltex.androidschool.activity.MainActivity"
            android:targetPackage="com.eltex.androidschool">

            <extra
                android:name="fragment"
                android:value="NewPostFragment" />
        </intent>

        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Ярлык для создания нового события -->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_calendar_24"
        android:shortcutId="create_event"
        android:shortcutLongLabel="@string/new_event_short_label"
        android:shortcutShortLabel="@string/new_event_long_label"
        app:iconTint="@color/active_element"
        tools:ignore="UnusedAttribute">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.eltex.androidschool.activity.MainActivity"
            android:targetPackage="com.eltex.androidschool">
            <extra

                android:name="fragment"
                android:value="NewEventFragment" />
        </intent>

        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
