<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/root_navigation"

    app:startDestination="@id/BottomNavigationFragment">

    <fragment
        android:id="@+id/BottomNavigationFragment"
        android:name="com.eltex.androidschool.fragments.BottomNavigationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_bottom_navigation">

        <action
            android:id="@+id/action_BottomNavigationFragment_to_newOrUpdatePostFragment"
            app:destination="@id/newOrUpdatePostFragment" />

        <action
            android:id="@+id/action_BottomNavigationFragment_to_newOrUpdateEventFragment"
            app:destination="@id/newOrUpdateEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.eltex.androidschool.fragments.EventsFragment"
        android:label="fragment_events"
        tools:layout="@layout/fragment_events">

        <action
            android:id="@+id/action_eventsFragment_to_newOrUpdateEventFragment"
            app:destination="@id/newOrUpdateEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/postsFragment"
        android:name="com.eltex.androidschool.fragments.PostsFragment"
        android:label="fragment_posts"
        tools:layout="@layout/fragment_posts">

        <action
            android:id="@+id/action_postsFragment_to_newOrUpdatePostFragment"
            app:destination="@id/newOrUpdatePostFragment" />
    </fragment>

    <fragment
        android:id="@+id/newOrUpdatePostFragment"
        android:name="com.eltex.androidschool.fragments.NewOrUpdatePostFragment"
        android:label="@string/new_post_title"
        tools:layout="@layout/fragment_new_or_update_post" />

    <fragment
        android:id="@+id/newOrUpdateEventFragment"
        android:name="com.eltex.androidschool.fragments.NewOrUpdateEventFragment"
        android:label="@string/new_event_title"
        tools:layout="@layout/fragment_new_or_update_event" />

</navigation>
