<!--chooseLanguageButton-->
<!--chooseThemeButton-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginBottom="10dp"

    tools:context=".fragments.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_name_customization"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/common_spacing"

        android:layout_weight="1"

        android:padding="@dimen/common_spacing"

        android:text="@string/application_appearance"
        android:textSize="24sp"

        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_settings_language"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/common_spacing"

        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name_customization">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/common_spacing">

            <TextView
                android:id="@+id/text_settings_language"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/сhanging_the_application_language"

                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_button_settings_language"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/active_element"
                android:text="@string/choose_language"
                android:textColor="@color/black_white_theme" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_settings_language_1"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/common_spacing"

        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_settings_language">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/common_spacing">

            <TextView
                android:id="@+id/data_text_1"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/changing_the_app_theme"

                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_button_settings_theme"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/active_element"
                android:text="@string/choose_theme"
                android:textColor="@color/black_white_theme" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_version_application"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="1"

        android:gravity="center"
        android:padding="@dimen/common_spacing"
        android:textSize="14sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:text="v1.15.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
