<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardDataUser"

        style="@style/CustomTextViewStyle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/common_spacing"

        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="vertical"

            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLogin"

                style="@style/CustomTextInputLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/login_no_transferred"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextViewStyle"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textName"

                style="@style/CustomTextInputLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:hint="@string/name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextViewStyle"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPasswordOne"

                style="@style/CustomTextInputLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextViewStyle"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPasswordTwo"

                style="@style/CustomTextInputLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:hint="@string/confirm_the_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextViewStyle"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textError"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="6dp"

        android:gravity="center_horizontal"
        android:textColor="@color/soft_red"
        android:textSize="12sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@id/cardDataUser"
        app:layout_constraintStart_toStartOf="@id/cardDataUser"
        app:layout_constraintTop_toBottomOf="@id/cardDataUser"

        tools:text="Ошибка регистрации" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegistration"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="28dp"

        android:backgroundTint="@color/active_element"
        android:text="@string/registration"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="@id/cardDataUser"
        app:layout_constraintStart_toStartOf="@id/cardDataUser"
        app:layout_constraintTop_toBottomOf="@id/cardDataUser" />

</androidx.constraintlayout.widget.ConstraintLayout>
